--- a/tasks/init_instance_ids.yml
+++ b/tasks/init_instance_ids.yml
@@ -1,6 +1,6 @@
 #
 # https://github.com/generaliinformatik/ansible_role_ec2
-# (c) 2019 Generali Informatik
+# (c) 2019 Generali Deutschland Informatik Services GmbH
 #
 
 - name: initialize instance_ids list
